--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp-deployment
+  name: webapp-deployment
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: myapp
+      app: webapp
   template:
     metadata:
       labels:
-        app: myapp
+        app: webapp
     spec:
       containers:
       - name: nginx
@@ -29,10 +29,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp-service
+  name: webapp-service
 spec:
   selector:
-    app: myapp
+    app: webapp
   ports:
   - name: http
     port: 80
