--- a/.github/workflows/testapp.yaml
+++ b/.github/workflows/testapp.yaml
@@ -17,7 +17,7 @@ jobs:
         permissions:
             contents: read
             id-token: write
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         steps:
             - uses: actions/checkout@v3
             - uses: azure/login@v1.4.3
