--- a/.github/workflows/testapp.yaml
+++ b/.github/workflows/testapp.yaml
@@ -1,64 +1,85 @@
 name: testapp
-"on":
-    push:
-        branches:
-            - develop
-    workflow_dispatch: {}
+on:
+  push:
+    branches:
+      - develop
+      - multiregion-deployment
+  workflow_dispatch: {}
 env:
-    ACR_RESOURCE_GROUP: test-app
-    AZURE_CONTAINER_REGISTRY: testapp01
-    CLUSTER_NAME: testapp-kubernetes
-    CLUSTER_RESOURCE_GROUP: test-app
-    CONTAINER_NAME: my-sudoko-app
-    DEPLOYMENT_MANIFEST_PATH: |
-        ./deployment.yaml
+  ACR_RESOURCE_GROUP: test-app
+  AZURE_CONTAINER_REGISTRY: testapp01
+  CONTAINER_NAME: my-sudoko-app
+  DEPLOYMENT_MANIFEST_PATH: ./deployment.yaml
 jobs:
-    buildImage:
-        permissions:
-            contents: read
-            id-token: write
-        runs-on: self-hosted
-        steps:
-            - uses: actions/checkout@v3
-            - uses: azure/login@v1.4.3
-              name: Azure login
-              with:
-                client-id: ${{ secrets.AZURE_CLIENT_ID }}
-                subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-                tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-            - name: Build and push image to ACR
-              run: az acr build --image ${{ env.CONTAINER_NAME }}:${{ github.sha }} --registry ${{ env.AZURE_CONTAINER_REGISTRY }} -g ${{ env.ACR_RESOURCE_GROUP }} -f ./Dockerfile ./
-    deploy:
-        permissions:
-            actions: read
-            contents: read
-            id-token: write
-        runs-on: ubuntu-latest
-        needs:
-            - buildImage
-        steps:
-            - uses: actions/checkout@v3
-            - uses: azure/login@v1.4.3
-              name: Azure login
-              with:
-                client-id: ${{ secrets.AZURE_CLIENT_ID }}
-                subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-                tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-            - uses: azure/use-kubelogin@v1
-              name: Set up kubelogin for non-interactive login
-              with:
-                kubelogin-version: v0.0.25
-            - uses: azure/aks-set-context@v3
-              name: Get K8s context
-              with:
-                admin: "false"
-                cluster-name: ${{ env.CLUSTER_NAME }}
-                resource-group: ${{ env.CLUSTER_RESOURCE_GROUP }}
-                use-kubelogin: "true"
-            - uses: Azure/k8s-deploy@v4
-              name: Deploys application
-              with:
-                action: deploy
-                images: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME }}:${{ github.sha }}
-                manifests: ${{ env.DEPLOYMENT_MANIFEST_PATH }}
-                namespace: my-sudoko-app
+  buildImage:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: azure/login@v1.4.3
+        name: Azure login
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+      - name: Build and push image to ACR
+        run: az acr build --image ${{ env.CONTAINER_NAME }}:${{ github.sha }} --registry ${{ env.AZURE_CONTAINER_REGISTRY }} -g ${{ env.ACR_RESOURCE_GROUP }} -f ./Dockerfile ./
+  deploy-testapp01:
+    runs-on: ubuntu-latest
+    needs:
+      - buildImage
+    steps:
+      - uses: actions/checkout@v3
+      - uses: azure/login@v1.4.3
+        name: Azure login
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+      - uses: azure/use-kubelogin@v1
+        name: Set up kubelogin for non-interactive login
+        with:
+          kubelogin-version: v0.0.25
+      - uses: azure/aks-set-context@v3
+        name: Get K8s context
+        with:
+          admin: "false"
+          cluster-name: testapp-kubernetes
+          resource-group: test-app
+          use-kubelogin: "true"
+      - uses: Azure/k8s-deploy@v4
+        name: Deploy to testapp01
+        with:
+          action: deploy
+          images: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME }}:${{ github.sha }}
+          manifests: ${{ env.DEPLOYMENT_MANIFEST_PATH }}
+          namespace: my-sudoko-app
+  deploy-testapp02:
+    runs-on: ubuntu-latest
+    needs:
+      - buildImage
+    steps:
+      - uses: actions/checkout@v3
+      - uses: azure/login@v1.4.3
+        name: Azure login
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+      - uses: azure/use-kubelogin@v1
+        name: Set up kubelogin for non-interactive login
+        with:
+          kubelogin-version: v0.0.25
+      - uses: azure/aks-set-context@v3
+        name: Get K8s context
+        with:
+          admin: "false"
+          cluster-name: testapp02-kubernetes
+          resource-group: test-app
+          use-kubelogin: "true"
+      - uses: Azure/k8s-deploy@v4
+        name: Deploy to testapp01
+        with:
+          action: deploy
+          images: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME }}:${{ github.sha }}
+          manifests: ${{ env.DEPLOYMENT_MANIFEST_PATH }}
+          namespace: my-sudoko-app
